# uart

./: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile2  README.md  cmake_install.cmake  run.sh  temp  test_uart
inc/: test_uart.h  uart.h
src/: test_uart.c  uart.c
